--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="css/grid.css">
     <!--manual css-->
     <link rel="stylesheet" href="css/style.css">
+    <!--responsive-->
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
     <!--header section-->
     <header class="header-section" id="home">
